# kirkwood-gpu

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: bench.py  cpu.json  cpu_1M.json  gpu.json  gpu_vs_cpu.md  gpu_wh.json  render_table.py
docs/: derivation.md  make_ae_figures.py  make_drift_figure.py
kirkwood_gpu/: __init__.py  _cuda_dll_loader.py  analysis.py  backend.py  initial_conditions.py  integrators.py  kepler.py  physics.py  render.py  run.py
tests/: test_integrator_energy.py  test_jacobi_constant.py  test_resonance_locations.py  test_wisdom_holman.py  test_yoshida_order.py
